make sure we aren't breaking the other menu and it's working correctly on mobile

--- a/src/components/PageSections/Header/_Header.scss
+++ b/src/components/PageSections/Header/_Header.scss
@@ -104,6 +104,10 @@
 }
 
 .coa-Header__gov-site {
+  display: none;
+  @include media($coa-medium-screen) {
+    display: inherit;
+  }
   background: $coa-color-blue-darkest;
   font-size: 1.2rem;
   svg {
@@ -121,4 +125,11 @@
   margin-right: .5rem;
   font-size: 1.1rem;
   cursor: pointer;
+}
+
+.coa-Header__menuIcon {
+  display: inline;
+  vertical-align: middle;
+  font-size: 1.8rem;
+  margin-right: .4rem;
 }
